# irrad_control

./: .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  requirements.txt  requirements_server.txt  ruff.toml  setup.py
.github/workflows/: main.yml
assets/: irrad_control.desktop
examples/: README.md  get_damage_distribution.py  get_damage_per_scan.py  read_irradiation_data.py
irrad_control/: __init__.py  configure_server.sh  converter.py  irrad_interpreter.py  irrad_server.py  main.py  new_interpreter.py  new_server.py  result_analysis.py  server.py
irrad_control/analysis/: README.txt  __init__.py  analyse.py  analysis.py  beam.py  calibration.py  constants.py  damage.py  dtype.py  fluence.py  fluence_dist_2d.py  formulas.py  main.py  plotting.py  scan.py  utils.py
irrad_control/analysis/examples/: README.txt  beam_pos_example.py  example_calibration.yaml  example_config.yaml  example_data.h5  example_irradiation.yaml  example_read_data.py
irrad_control/config/: axis_config.yaml  daq_config.yaml  network_config.yaml  xy_stage_config.yaml
irrad_control/devices/: README.md  __init__.py  devices.py  devices_config.yaml  irrad_udev.rules  serial_device.py
irrad_control/devices/adc/: pipyadc.py
irrad_control/devices/arduino/: ArdSer.py  arduino_serial.py  serard.py  serial_arduino.py
irrad_control/gui/: utils.py
irrad_control/ions/: __init__.py
irrad_control/processes/: __init__.py  converter.py  daq.py  gui.py  monitor.py  server.py
irrad_control/scripts/: configure_server.sh
irrad_control/utils/: __init__.py  daq_proc.py  dut_scan.py  events.py  irrad_proc.py  logger.py  proc_manager.py  tools.py  utils.py  worker.py
scripts/: configure_server.sh  init_desktop_file.py  install.sh  item_daemon.sh
tests/: test_main.py  test_main_1.py  test_setup.py
tests/analysis/: test_analysis.py  test_cli.py
tests/examples/: test_examples.py
tests/fixtures/: test_calibration.h5  test_calibration.yaml  test_irrad_w_corr.h5  test_irrad_w_corr.yaml  test_irradiation.yaml  test_irradiation_linear_gradient.yaml  test_irradiation_multipart_part_1.h5  test_irradiation_multipart_part_1.yaml  test_irradiation_multipart_part_2.h5  test_irradiation_multipart_part_2.yaml
tests/gui/: test_main.py
tests/proc/: test_converter.py  test_daq_proc.py
(+82 files in other folders)
